[workspace]
members = [
]

[package]
name = "slimjs"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false


[[bin]]
name = "slimjs"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]


[dependencies]
c2rust-bitfields = "0.3"
c2rust-asm-casts = "0.2"
libc = "0.2"
getrandom = "0.2.2"



