[workspace]
members = [
]

[package]
name = "slimjs"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]


[dependencies]
c2rust-bitfields = "0.3"
c2rust-asm-casts = "0.2"
printf-compat = "0.1.1"
format_num = "0.1.0"
chrono = "0.4.19"
libc = "0.2.86"


[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
getrandom = "0.2.2"
